--- a/PECL/src/main/java/concurrencia/ProgPrincipal.form
+++ b/PECL/src/main/java/concurrencia/ProgPrincipal.form
@@ -313,6 +313,9 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="Pausar"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonPausarReanudarActionPerformed"/>
+              </Events>
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
                   <AbsoluteConstraints x="480" y="440" width="150" height="40"/>
@@ -323,6 +326,9 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="Generar amenaza de insecto invasor"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonGenerarAmenazaInsectoInvasorActionPerformed"/>
+              </Events>
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
                   <AbsoluteConstraints x="700" y="440" width="340" height="40"/>
