--- a/PECL/src/main/java/concurrencia/ProgPrincipal.form
+++ b/PECL/src/main/java/concurrencia/ProgPrincipal.form
@@ -312,6 +312,9 @@
             <Component class="javax.swing.JButton" name="jButtonPausarReanudar">
               <Properties>
                 <Property name="text" type="java.lang.String" value="Pausar"/>
+                <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
+                  <Color id="Hand Cursor"/>
+                </Property>
               </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonPausarReanudarActionPerformed"/>
@@ -325,6 +328,9 @@
             <Component class="javax.swing.JButton" name="jButtonGenerarAmenazaInsectoInvasor">
               <Properties>
                 <Property name="text" type="java.lang.String" value="Generar amenaza de insecto invasor"/>
+                <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
+                  <Color id="Hand Cursor"/>
+                </Property>
               </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonGenerarAmenazaInsectoInvasorActionPerformed"/>
